--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-    "python.pythonPath": "/Users/karen_duane/anaconda3/envs/pytorch/bin/python.app",
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true
+  "python.pythonPath": "/Users/karen_duane/anaconda3/envs/pytorch/bin/python.app",
+  "python.linting.enabled": true,
+  "python.linting.pylintEnabled": true,
+  "debug.allowBreakpointsEverywhere": true,
+  "debug.console.closeOnEnd": true
 }
